création dossiers arborescence

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 
 <head>
     <!--Information régles du site-->
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale= 1">
+    <title>Ohmyfood-MobileFirst</title>
+    <link rel="stylesheet" href="./public/css/styles.css" type="text/css">
+    <meta name="description" content="Entreprise de commande de repas en ligne">
+    <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
@@ -14,16 +18,16 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" 
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" 
     crossorigin="anonymous">
-    <title>Ohmyfood-MobileFirst</title>
-    <meta name="description" content="Entreprise de commande de repas en ligne" />
-    <meta name="viewport" content="width=device-width, initial-scale= 1">
+    
+    
    
 
 </head>
 <body>
 <header>
-
+    <div>logo</div>
 </header>
+
 <main>
 
 </main>
