--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <!--Information régles du site-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale= 1">
+    <link rel="stylesheet" href="./public/css/styles.css">
+
     <title>Ohmyfood-MobileFirst</title>
-    <link rel="stylesheet" href="./public/css/styles.css" type="text/css">
     <meta name="description" content="Entreprise de commande de repas en ligne">
     <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
