--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <title>Ohmyfood-MobileFirst</title>
     <meta name="description" content="Entreprise de commande de repas en ligne">
     <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
-    
+    <!-- Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <!-- Font Awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" 
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" 
     crossorigin="anonymous">
@@ -26,8 +27,15 @@
 
 </head>
 <body>
+    <!--loading spinner-->
+    <di>
+        <di></di>
+    </di>
+      <!--logo-->
 <header>
-    <div>logo</div>
+  <div class="header">
+      <a href="index.htlm"><h1 class="hearder__logo">ohmyfood</h1></a>
+  </div>
 </header>
 
 <main>
