--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!--logo-->
 <header>
   <div class="header">
-      <a href="index.htlm"><h1 class="hearder__logo">ohmyfood</h1></a>
+    <img>
   </div>
 </header>
 
