construction arborescence sass

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!--logo-->
 <header>
   <div class="header">
-    <img src="public/logo/ohmyfood@2x.svg"> class="logo" alt="logo ohmyfood" />
+    <img src="public/logo/ohmyfood@2x.svg"> 
   </div>
 </header>
 
