modif chemin logo

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <footer>
   <nav>
     <ul>
-    <li><img class="logo" src="/public/logo/ohmyfood@2x.svg"></li>
+    <li><img class="logo" src="./public/logo/ohmyfood@2x.svg"></li>
     <li><a href="#"><i class="fas fa-utensils margin_sup"></i>Proposer un restaurant</a></li>
     <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
     <li><a href="#">Mentions légales</a></li>
