--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!--logo-->
 <header >
   
-     <img class="logo" src="/public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
+     <img class="logo" src="./public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
    
 </header>
 
