--- a/public/pages/menu4.html
+++ b/public/pages/menu4.html
@@ -5,7 +5,7 @@
     <!--Information régles du site-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale= 1">
-    <link rel="stylesheet" href="./public/css/styles.css">
+    <link rel="stylesheet" href="/public/css/style.css">
     <title>Ohmyfood-MobileFirst</title>
     <meta name="description" content="Entreprise de commande de repas en ligne">
     <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
