modification breakpoints et loader

--- a/public/pages/menu3.html
+++ b/public/pages/menu3.html
@@ -27,6 +27,135 @@
            <img class="logo" src="/public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">      
       </header>
       <main>
+        <div class="header__img">
+          <img src="../images/menu3.jpg" alt="menu À la française" title="ohmyfood menu À la française">
+      </div>
+    <div class="main__menu">
+        <div class="menu__title">
+            <h2>À la française</h2>
+                <span><i class="heart far fa-heart"></i></span>
+        </div>
+        <div class="full__menu">
+            <!-- Entrées -->
+            <div class="starter">
+                <div class="starter__title">
+                    <h4>Entrées</h4>
+                    <div class="line"></div>
+                </div>
+                <div class="meals">
+                    <h3>Tartare de poulpe acidulé</h3>
+                    <div class="last__line">
+                        <p>Aux zestes d'orange</p>
+                        <span><strong>25€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Velouté de légumes d'antan</h3>
+                    <div class="last__line">
+                        <p>Carotte, panais, topinambour</p>
+                        <span><strong>35€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Soupe à l'oignon</h3>
+                    <div class="last__line">
+                        <p>Revisitée</p>
+                        <span><strong>20€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+            </div>
+  
+            <!-- Plats principaux -->
+            <div class="dish">
+                <div class="dish__title">
+                    <h4>Plats</h4>
+                    <div class="line"></div>
+                </div>
+                <div class="meals">
+                    <h3>Coquilles Saint-Jacques</h3>
+                    <div class="last__line">
+                        <p>Accompagnées d'une purée de panais</p>
+                        <span><strong>40€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Magret de canard</h3>
+                    <div class="last__line">
+                        <p>Et parmentier de pommes de terre</p>
+                        <span><strong>35€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                    <div class="last__line">
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <span><strong>44€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+            </div>
+  
+            <!-- Desserts -->
+            <div class="dessert">
+                <div class="dessert__title">
+                    <h4>Desserts</h4>
+                    <div class="line"></div>
+                </div>
+                <div class="meals">
+                    <h3>Pétales de violettes glacés</h3>
+                    <div class="last__line">
+                        <p>Et purée de noisettes</p>
+                        <span><strong>18€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Fondant au chocolat</h3>
+                    <div class="last__line">
+                        <p>Revisité</p>
+                        <span><strong>22€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Millefeuille croustillant</h3>
+                    <div class="last__line">
+                        <p>Myrtilles et pâte d’amande</p>
+                        <span><strong>23€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <span class="btn__order">
+            <button> Commander </button>
+        </span>
+    </div>
           
       </main>
       <footer>
