--- a/public/pages/menu4.html
+++ b/public/pages/menu4.html
@@ -27,6 +27,135 @@
            <img class="logo" src="/public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">      
       </header>
       <main>
+        <div class="header__img">
+          <img src="../images/menu4.jpg" alt="menu Le délice des sens" title="ohmyfood menu Le délice des sens">
+      </div>
+    <div class="main__menu">
+        <div class="menu__title">
+            <h2>Le délice des sens</h2>
+                <span><i class="heart far fa-heart"></i></span>
+        </div>
+        <div class="full__menu">
+            <!-- Entrées -->
+            <div class="starter">
+                <div class="starter__title">
+                    <h4>Entrées</h4>
+                    <div class="line"></div>
+                </div>
+                <div class="meals">
+                    <h3>Tartare de thon</h3>
+                    <div class="last__line">
+                        <p>Assaisonné au yuzu</p>
+                        <span><strong>25€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Bouchée de homard croustillant</h3>
+                    <div class="last__line">
+                        <p>Et sa farandole de petits légumes</p>
+                        <span><strong>35€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Velouté de cèpes</h3>
+                    <div class="last__line">
+                        <p>Aux truffes</p>
+                        <span><strong>20€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+            </div>
+  
+            <!-- Plats principaux -->
+            <div class="dish">
+                <div class="dish__title">
+                    <h4>Plats</h4>
+                    <div class="line"></div>
+                </div>
+                <div class="meals">
+                    <h3>Poulet rôti aux herbes de Provence</h3>
+                    <div class="last__line">
+                        <p>Et sa crème de truffe</p>
+                        <span><strong>40€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Langouste rôtie</h3>
+                    <div class="last__line">
+                        <p>Et ses légumes de saison</p>
+                        <span><strong>35€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Côte de boeuf Angus</h3>
+                    <div class="last__line">
+                        <p>Et sa purée de panais</p>
+                        <span><strong>44€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+            </div>
+  
+            <!-- Desserts -->
+            <div class="dessert">
+                <div class="dessert__title">
+                    <h4>Desserts</h4>
+                    <div class="line"></div>
+                </div>
+                <div class="meals">
+                    <h3>Farandole de desserts</h3>
+                    <div class="last__line">
+                        <p>Du chef</p>
+                        <span><strong>18€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Crème brulée</h3>
+                    <div class="last__line">
+                        <p>Revisitée</p>
+                        <span><strong>22€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Tiramisu</h3>
+                    <div class="last__line">
+                        <p>À la noisette</p>
+                        <span><strong>23€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <span class="btn__order">
+            <button> Commander </button>
+        </span>
+    </div>
           
       </main>
       <footer>
