--- a/public/pages/menu2.html
+++ b/public/pages/menu2.html
@@ -27,6 +27,145 @@
            <img class="logo" src="/public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">      
       </header>
       <main>
+        <div class="header__img">
+          <img src="../images/menu2.jpg" alt="menu La note enchantée" title="ohmyfood menu La note enchantée">
+      </div>
+    <div class="main__menu">
+        <div class="menu__title">
+            <h2>La note enchantée</h2>
+                <span><i class="heart far fa-heart"></i></span>
+        </div>
+        <div class="full__menu">
+            <!-- Entrées -->
+            <div class="starter">
+                <div class="starter__title">
+                    <h4>Entrées</h4>
+                    <div class="line"></div>
+                </div>
+                <div class="meals">
+                    <h3>Ravioles de foie gras</h3>
+                    <div class="last__line">
+                        <p>Accompagnés de leur crème à la truffe</p>
+                        <span><strong>25€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Caviar osciètre</h3>
+                    <div class="last__line">
+                        <p>Sur blini à la farine de blé noir</p>
+                        <span><strong>35€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Homard et espuma de potiron</h3>
+                    <div class="last__line">
+                        <p>Mariné aux zestes d'orange</p>
+                        <span><strong>20€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Foie gras de canard cuit entier</h3>
+                    <div class="last__line">
+                        <p>Confiture de figue et pain toasté</p>
+                        <span><strong>35€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+            </div>
+  
+            <!-- Plats principaux -->
+            <div class="dish">
+                <div class="dish__title">
+                    <h4>Plats</h4>
+                    <div class="line"></div>
+                </div>
+                <div class="meals">
+                    <h3>Noix de coquilles Saint-Jacques</h3>
+                    <div class="last__line">
+                        <p>Sur lit de purée de céleri-rave</p>
+                        <span><strong>40€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Langoustine poêlée</h3>
+                    <div class="last__line">
+                        <p>Purée de patate douce</p>
+                        <span><strong>35€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Mijoté de queue de boeuf</h3>
+                    <div class="last__line">
+                        <p>Et riz sauvage aux zestes de citron</p>
+                        <span><strong>44€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+            </div>
+  
+            <!-- Desserts -->
+            <div class="dessert">
+                <div class="dessert__title">
+                    <h4>Desserts</h4>
+                    <div class="line"></div>
+                </div>
+                <div class="meals">
+                    <h3>Macaron noisette et chocolat</h3>
+                    <div class="last__line">
+                        <p>Glace au caramel brun et sel de Guérande</p>
+                        <span><strong>18€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Baba au rhum revisité</h3>
+                    <div class="last__line">
+                        <p>Avec son coulis de citron</p>
+                        <span><strong>22€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+                <div class="meals">
+                    <h3>Tarte au citron meringuée</h3>
+                    <div class="last__line">
+                        <p>Déstructurée</p>
+                        <span><strong>23€</strong></span>
+                    </div>
+                    <div class="cross">
+                        <span><i class="fas fa-check-circle fa-2x"></i></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <span class="btn__order">
+            <button> Commander </button>
+        </span>
+    </div>
           
       </main>
       <footer>
