--- a/public/pages/menu1.html
+++ b/public/pages/menu1.html
@@ -5,7 +5,7 @@
   <!--Information régles du site-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale= 1">
-  <link rel="stylesheet" href="./public/css/style.css">
+  <link rel="stylesheet" href="/public/css/style.css">
   <title>Ohmyfood-MobileFirst</title>
   <meta name="description" content="Entreprise de commande de repas en ligne">
   <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
@@ -131,7 +131,7 @@
                   </div>
               </div>
               <div class="meals">
-                  <h3>Macaron au chocolat d'exception </h3>
+                  <h3>Macaron au chocolat d'exception</h3>
                   <div class="last__line">
                       <p>Et glace à la vanille de Madagascar</p>
                       <span><strong>22€</strong></span>
