--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <!--loading spinner-->
+  <!--loading spinner
   <div class="loader">
     <div class="defilement">
       
@@ -31,7 +31,7 @@
  
   </div>
 
-  </div>
+  </div>-->
   <!--logo-->
   <header>
     <img class="logo" src="./public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
