--- a/public/pages/menu1.html
+++ b/public/pages/menu1.html
@@ -25,12 +25,12 @@
     <a href="../index.html">
       <i class="fas fa-arrow-left"></i>
     </a>
-    <img class="logo" src="./public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
+    <img class="logo" src="/public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
   </header>
   <!--Main menu1 La palette du goût-->
   <main class="main">
     <div class="header__img">
-        <img src="../public/images/menu1.jpg" alt="menu palette du gout" title="ohmyfood menu palette du gout">
+        <img src="/public/images/menu1.jpg" alt="menu palette du gout" title="ohmyfood menu palette du gout">
     </div>
   <div class="main__menu">
       <div class="menu__title">
@@ -161,7 +161,7 @@
   </main>
 
   <footer>
-    <img class="logo" src="../public/logo/ohmyfood@2x.svg" alt="logo Restaurant">
+    <img class="logo" src="/public/logo/ohmyfood@2x.svg" alt="logo Restaurant">
     <ul>
       <li><a href="#"><i class="fas fa-utensils margin_sup"></i>Proposer un restaurant</a></li>
       <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
