--- a/public/pages/menu1.html
+++ b/public/pages/menu1.html
@@ -25,7 +25,7 @@
     <a href="./index.html">
       <i class="fas fa-arrow-left"></i>
     </a>
-    <img class="logo" src="/public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
+    <img class="logo" src="/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
   </header>
   <!--Main menu1 La palette du goût-->
   <main class="main">
