--- a/public/pages/menu1.html
+++ b/public/pages/menu1.html
@@ -22,7 +22,7 @@
 <body>
 <!--Hearder avec retour page index-->
   <header>
-    <a href="./index.html">
+    <a href="/index.html">
       <i class="fas fa-arrow-left"></i>
     </a>
     <img class="logo" src="../logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
