--- a/public/pages/menu2.html
+++ b/public/pages/menu2.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header>      
-        <a href="/index.html">
+        <a href="./index.html">
             <i class="fas fa-arrow-left"></i>
             </a>      
            <img class="logo" src="../logo/ohmyfood@2x.svg" alt="logo Ohmyfood">      
