--- a/public/pages/menu1.html
+++ b/public/pages/menu1.html
@@ -5,7 +5,7 @@
   <!--Information régles du site-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale= 1">
-  <link rel="stylesheet" href="/public/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <title>Ohmyfood-MobileFirst</title>
   <meta name="description" content="Entreprise de commande de repas en ligne">
   <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
@@ -25,12 +25,12 @@
     <a href="/index.html">
       <i class="fas fa-arrow-left"></i>
     </a>
-    <img class="logo" src="/public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
+    <img class="logo" src="../logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
   </header>
   <!--Main menu1 La palette du goût-->
   <main class="main">
     <div class="header__img">
-        <img src="/public/images/menu1.jpg" alt="menu palette du gout" title="ohmyfood menu palette du gout">
+        <img src="../images/menu1.jpg" alt="menu palette du gout" title="ohmyfood menu palette du gout">
     </div>
   <div class="main__menu">
       <div class="menu__title">
@@ -161,7 +161,7 @@
   </main>
 
   <footer>
-    <img class="logo" src="/public/logo/ohmyfood@2x.svg" alt="logo Restaurant">
+    <img class="logo" src="../logo/ohmyfood@2x.svg" alt="logo Restaurant">
     <ul>
       <li><a href="#"><i class="fas fa-utensils margin_sup"></i>Proposer un restaurant</a></li>
       <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
