--- a/public/pages/menu4.html
+++ b/public/pages/menu4.html
@@ -5,7 +5,7 @@
     <!--Information régles du site-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale= 1">
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Ohmyfood-MobileFirst</title>
     <meta name="description" content="Entreprise de commande de repas en ligne">
     <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
@@ -21,10 +21,10 @@
 </head>
 <body>
     <header>      
-        <a href="/index.html">
+        <a href="../../index.html">
             <i class="fas fa-arrow-left"></i>
             </a>      
-           <img class="logo" src="/public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">      
+           <img class="logo" src="../logo/ohmyfood@2x.svg" alt="logo Ohmyfood">      
       </header>
       <main>
         <div class="header__img">
@@ -160,7 +160,7 @@
       </main>
       <footer>
       
-        <img class="logo" src="/public/logo/ohmyfood@2x.svg" alt="logo Restaurant">
+        <img class="logo" src="../logo/ohmyfood@2x.svg" alt="logo Restaurant">
         <ul>
       
           <li><a href="#"><i class="fas fa-utensils margin_sup"></i>Proposer un restaurant</a></li>
