Mise en place mediaquery

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <section class=menus>
       <div class="menus_restaurant">
         <h2>Restaurants</h2>
+        <div class="menus__cartes">
         <div class="card">
           <div class="btn__card">
             <span class="new"> Nouveau </span>
@@ -148,6 +149,7 @@
             </figcaption>
           </figure>
         </div>
+      </div>
       </div>
     </section>
   </main>
