animation et responsive

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
   <!--loading spinner-->
   <div class="loader">
     <div class="defilement">
-      
-    <p>Plus de perte de temps<br>composer<br>commander<br>votre menu gastronomique<br>en ligne<br>avec</p>
+      <div class="logo1" >
+        <img src="./public/logo/Chef_test.png" alt="Présenation Ohmyfood">
+  </div>
+    <p>Plus de perte de temps, Composer, Commander votre menu gastronomique en ligne avec</p>
+    <img src="./public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
   
-  
-    <img class="logo" src="./public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
- 
   </div>
 
   </div>
