--- a/public/pages/menu1.html
+++ b/public/pages/menu1.html
@@ -48,7 +48,7 @@
                   <h3>Fricassée d'escargot</h3>
                   <div class="last__line">
                       <p>Au piment d'espelette</p>
-                      <span><strong>25€</strong></span>
+                      <span class="num">25€</span>
                   </div>
                   <div class="cross">
                       <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -58,7 +58,7 @@
                   <h3>Foie gras de canard mi-cuit</h3>
                   <div class="last__line">
                       <p>Et ses copeaux de truffe noire</p>
-                      <span><strong>35€</strong></span>
+                      <span class="num">35€</span>
                   </div>
                   <div class="cross">
                       <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -68,7 +68,7 @@
                   <h3>Oeuf au plat</h3>
                   <div class="last__line">
                       <p>Assaisonné à la truffe sur lit de caviar</p>
-                      <span><strong>20€</strong></span>
+                      <span class="num">20€</span>
                   </div>
                   <div class="cross">
                       <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -86,7 +86,7 @@
                   <h3>Filet de boeuf aux herbes</h3>
                   <div class="last__line">
                       <p>Accompagné de sa ribambelle de légumes</p>
-                      <span><strong>40€</strong></span>
+                      <span class="num">40€</span>
                   </div>
                   <div class="cross">
                       <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -96,7 +96,7 @@
                   <h3>Parmentier de queue de boeuf</h3>
                   <div class="last__line">
                       <p>À la truffe noire sur sa purée de panais</p>
-                      <span><strong>35€</strong></span>
+                      <span class="num">35€</span>
                   </div>
                   <div class="cross">
                       <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -106,7 +106,7 @@
                   <h3>Filet de turbot</h3>
                   <div class="last__line">
                       <p>Aux agrumes</p>
-                      <span><strong>44€</strong></span>
+                      <span class="num">44€</span>
                   </div>
                   <div class="cross">
                       <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -124,7 +124,7 @@
                   <h3>Paris-Brest</h3>
                   <div class="last__line">
                       <p>Revisité</p>
-                      <span><strong>18€</strong></span>
+                      <span class="num">18€</span>
                   </div>
                   <div class="cross">
                       <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -134,7 +134,7 @@
                   <h3>Macaron au chocolat d'exception</h3>
                   <div class="last__line">
                       <p>Et glace à la vanille de Madagascar</p>
-                      <span><strong>22€</strong></span>
+                      <span class="num">22€</span>
                   </div>
                   <div class="cross">
                       <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -144,7 +144,7 @@
                   <h3>Mousse au chocolat</h3>
                   <div class="last__line">
                       <p>Au piment d'Espelette et à la truffe noire</p>
-                      <span><strong>23€</strong></span>
+                      <span class="num">23€</span>
                   </div>
                   <div class="cross">
                       <span><i class="fas fa-check-circle fa-2x"></i></span>
